<resources>
    <string name="app_name">EndProjectAndroid</string>

    <!--Main menu-->
    <string name="menu_main_name">Settings</string>
        <!--Settings fragment-->
        <string name="settings_specify_card">Specify card</string>
        <string name="settings_enter_card_name">Enter card name</string>
        <string name="settings_select_card_type">Select card type</string>
        <string name="settings_category_filters">Filters</string>
        <string name="save_filters_button">save_filters_button</string>

    <!--Card variables-->
    <string name="card_name_placeholder">Name: %1$s</string>
    <string name="card_type_placeholder">Type: %1$s</string>
    <string name="card_atk_placeholder">Attack:</string>
    <string name="card_def_placeholder">Defence:</string>
    <string name="card_level_placeholder">Level:</string>
    <string name="card_race_placeholder">Race:</string>
    <string name="card_attribute_placeholder">Attribute:</string>
    <string name="card_description_placeholder">Description:</string>
        <!--Card variables placeholders-->
        <string name="variable_placeholder_integer">%1$s %2$d</string>
        <string name="variable_placeholder_string">%1$s %2$s</string>
        <string name="na_placeholder">%1$s NA</string>

    <!--Edit card-->
    <string name="edit_card_name_placeholder">Name:</string>
    <string name="edit_card_type_placeholder">Type:</string>
    <string name="edit_card_atk_placeholder">Attack:</string>
    <string name="edit_card_def_placeholder">Defence:</string>
    <string name="edit_card_level_placeholder">Level:</string>
    <string name="edit_card_race_placeholder">Race:</string>
    <string name="edit_card_attribute_placeholder">Attribute:adf</string>
    <string name="edit_card_description_placeholder">Description:</string>
        <!--Edit card buttons-->
        <string name="edit_card_text">Edit card</string>
        <string name="save_edit_button_text">Save</string>
        <string name="cancel_edit_button_text">Cancel</string>

    <!--Error-->
    <string name="error_text_exception">Something went wrong!\nPlease restart the application</string>
    <string name="error_image_text">Something went wrong!</string>
    <string name="error_text_no_cards_found">No card matching your filters was found.</string>

</resources>